fix modal font color in dark mode

--- a/styles/shared-style.css
+++ b/styles/shared-style.css
@@ -15,6 +15,7 @@
 
   --signature-containr-color: #dfdfdf;
   --card-background: linear-gradient(to left, #c6e2ff, #007bff);
+  --modal-overlay: #00000066;
 }
 
 [page-theme="dark"] {
@@ -34,6 +35,7 @@
 
   --signature-containr-color: #515151;
   --card-background: linear-gradient(to right, #0e4774, #0e5eb3);
+  --modal-overlay: #ffffff66;
 }
 * {
   color: var(--black-to-white);
@@ -283,12 +285,11 @@ body {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--modal-overlay);
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: var(--main-color);
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
